istio/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  #name gateway
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80  #nomor port untuk gateway
      name: http  #nama port
      protocol: HTTP  #protokol yang digunakan
    hosts:
    - "*"  #daftar host yang harus di-matching oleh Gateway. "*" berarti match semua host
